--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <style>
      body {
       font-family: 'Nunito', sans-serif;
-      background: url({{ url_for('static', filename='img/equal.gif') }}) bottom left #201D38 repeat-x;
+      background: url(img/equal.gif) bottom left #201D38 repeat-x;
       background-attachment: fixed;
       background-size:350px 124px;
       color: #B6B6B6;
@@ -27,7 +27,7 @@
 
      }
    </style>
-   <script type="text/javascript" src="{{ url_for('static', filename='js/rainbow.js') }}"></script>
+   <script type="text/javascript" src="js/rainbow.js"></script>
    <script type="text/javascript">
      $(function() {
       $('#dobwow').rainbow({animate:true,animateInterval:100,colors:['#FF0000','#f26522','#fff200','#00a651','#28abe2','#9182ff']});
