index.html edited online with Bitbucket

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
    <title>dobwow</title>
-   <link href='http://fonts.googleapis.com/css?family=Nunito:700' rel='stylesheet' type='text/css'>
-   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+   <link href='//fonts.googleapis.com/css?family=Nunito:700' rel='stylesheet' type='text/css'>
+   <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
    <style>
      body {
       font-family: 'Nunito', sans-serif;
