--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
    <style>
      body {
       font-family: 'Nunito', sans-serif;
-      background: url(img/equal.gif) bottom left #201D38 repeat-x;
+      background: url(img/bean.gif) #201d38;
+      background-position:center top;
+      /*background-size:108px 113px;*/
+      color: #B6B6B6;
+      text-align:center;
+     }
+     #equal {
+      height:124px;
+      width:100%;
+      position: fixed;
+      bottom:0;
+      left:0;
+      background: url(img/equal.gif) bottom left rgba(32,29,56,.75) repeat-x;
       background-attachment: fixed;
       background-size:350px 124px;
       color: #B6B6B6;
-      text-align:center;
      }
      #dobwow {
       height:150px;
@@ -36,6 +47,7 @@
 </head>
 <body>
 <div id="dobwow">dobwow</div>
+<div id="equal">&nbsp;</div>
 <div style="display:none;">
 <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/88910704&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
 </div>
