--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 </head>
 <body>
 <div id="dobwow">dobwow</div>
-<div id="equal">&nbsp;</div>
-<div style="display:none;">
-<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/88910704&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
+<div>
+   <iframe style="border: 0; width: 100%; height: 42px;" src="http://bandcamp.com/EmbeddedPlayer/album=2868217946/size=small/bgcol=ffffff/linkcol=0687f5/track=964435503/transparent=true/" seamless><a href="http://tdrrecords.bandcamp.com/album/politefully-dead">Politefully Dead by Punchline</a></iframe>
 </div>
+<div id="equal">&nbsp;</div>
 </body>
 </html>
