--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
       left:50%;
       margin-top:-75px;
       margin-left:-500px;
-
+     }
+     #player {
+      width: 1000px;
+      font-size: 150px;
+      line-height: 150px;
+      position: absolute;
+      top: 56%;
+      left: 50%;
+      margin-top: -75px;
+      margin-left: -350px;
      }
    </style>
    <script type="text/javascript" src="js/rainbow.js"></script>
@@ -57,7 +66,7 @@
 </head>
 <body>
 <div id="dobwow">dobwow</div>
-<div>
+<div id="player">
    <iframe style="border: 0; width: 100%; height: 42px;" src="http://bandcamp.com/EmbeddedPlayer/album=2868217946/size=small/bgcol=ffffff/linkcol=0687f5/track=964435503/transparent=true/" seamless><a href="http://tdrrecords.bandcamp.com/album/politefully-dead">Politefully Dead by Punchline</a></iframe>
 </div>
 <div id="equal">&nbsp;</div>
